--- a/src/main/resources/fxml/Hello.fxml
+++ b/src/main/resources/fxml/Hello.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt.fxcontrollers.HelloController">
+<AnchorPane prefHeight="300.0" prefWidth="239.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projekt.fxcontrollers.HelloController">
    <children>
-      <VBox layoutX="8.0" prefHeight="200.0" prefWidth="559.0">
+      <VBox layoutX="127.0" layoutY="100.0" prefHeight="200.0" prefWidth="559.0">
          <children>
             <Label fx:id="lbl_e1" text="E1:" />
             <Label fx:id="lbl_e2" text="E2:" />
